Use correct chunk generators for template worlds
To achieve this, a new file (`.buildsystem-generator-date.txt`) is stored in the world's directory. The content of this file can be one of two values:
- The predefined generator (`NORMAL`, `FLAT`, `VOID`, etc.)
- The custom generator used to create the world

This file is then used for custom worlds to determine which chunk generator is to be used for generation